Cleaned up compile warnings with JDK21